fix several alignment issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -175,3 +175,11 @@
     display: none;
   }
 }
+
+.dataTables_filter{
+  float: right;
+}
+
+.dataTables_paginate{
+  float:right;
+}
